# MMZ1-4-Script-Editor

./: CMakeLists.txt  README.md  editcommand.h  main.cpp  scripteditor.cpp  scripteditor.h  scripttexteditor.cpp  scripttexteditor.h
.github/workflows/: appimage.yml
packaging/: appimage.sh
resources/desktop/: MMZScriptEditor.desktop
